footer_navbar_modified

--- a/src/app/shared/components/header-side/header-side.template.html
+++ b/src/app/shared/components/header-side/header-side.template.html
@@ -19,7 +19,7 @@
   </div> -->
 
   <span fxFlex></span>
-  <!-- Language Switcher -->
+  <!-- Language Switcher 
   <button mat-button [matMenuTriggerFor]="menu">
     <span class="flag-icon {{currentLang.flag}} mr-05"></span>
     <span>{{currentLang.name}}</span>
@@ -33,10 +33,10 @@
 
 
   <egret-search-input-over placeholder="Country (e.g. US)" resultPage="/search">
-  </egret-search-input-over>
+  </egret-search-input-over>-->
   <!-- Open "views/search-view/result-page.component" to understand how to subscribe to input field value -->
 
-  <!-- Notification toggle button -->
+  <!-- Notification toggle button 
   <button
     mat-icon-button
     matTooltip="Notifications"
@@ -46,14 +46,14 @@
   >
     <mat-icon>notifications</mat-icon>
     <span class="notification-number mat-bg-warn">3</span>
-  </button>
+  </button>-->
   <!-- Top left user menu -->
   <button
     mat-icon-button
     [matMenuTriggerFor]="accountMenu"
     class="topbar-button-right img-button"
   >
-    <img src="assets/images/face-7.jpg" alt="" />
+    <img src="assets/images/inzin_logo.png" alt="" />
   </button>
 
   <mat-menu #accountMenu="matMenu">
