--- a/src/app/shared/components/sidebar-side/sidebar-side.component.html
+++ b/src/app/shared/components/sidebar-side/sidebar-side.component.html
@@ -4,8 +4,8 @@
             
             <!-- App Logo -->
             <div class="branding">
-                <img src="assets/images/logo.png" alt="" class="app-logo">
-                <span class="app-logo-text">INZIN</span>
+                
+                <span class="app-logo-text">Inzin Admin</span>
                 
                 <span style="margin: auto" *ngIf="layoutConf.sidebarStyle !== 'compact'"></span>
                 <div 
@@ -15,16 +15,16 @@
                 *ngIf="layoutConf.sidebarStyle !== 'compact'"><span></span></div>
             </div>
         
-            <!-- Sidebar user -->
+            <!-- Sidebar user 
             <div class="app-user">
                 <div class="app-user-photo">
-                <img src="assets/images/face-7.jpg" class="mat-elevation-z1" alt="">
+                <img src="assets/images/inzin_logo.png" class="mat-elevation-z1" alt="">
                 </div>
                 <span class="app-user-name mb-05">
                 <mat-icon class="icon-xs text-muted">lock</mat-icon> 
                 Watson Joyce
                 </span>
-                <!-- Small buttons -->
+                
                 <div class="app-user-controls">
                 <button 
                 class="text-muted"
@@ -68,7 +68,7 @@
                     </button>
                     </mat-menu>
                 </div>
-            </div>
+            </div>-->
             <!-- Navigation -->
             <app-sidenav [items]="menuItems" [hasIconMenu]="hasIconTypeMenuItem" [iconMenuTitle]="iconTypeMenuTitle"></app-sidenav>
         </div>
