--- a/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
+++ b/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
@@ -1,5 +1,5 @@
 <h1 matDialogTitle>{{data.title}}</h1>
-{{"ADD" | translate }} {{"MEMBER" | translate }}
+{{"ADD" | translate }} {{"CATEGORY" | translate }}
   <form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     <div fxFlex="50"  class="pr-1">
