--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -1,5 +1,5 @@
 <h1 matDialogTitle>{{data.title}}</h1>
-{{"ADD" | translate }} {{"MEMBER" | translate }}
+{{"ADD" | translate }} {{"PRODUCT" | translate }}
   <form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     <div fxFlex="50"  class="pr-1">
@@ -11,72 +11,90 @@
         placeholder="Name">
       </mat-form-field>
     </div>
-
-    
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        type="number"
-        name="age"
-        [formControl]="itemForm.controls['age']"
-        placeholder="Age">
-      </mat-form-field>
-    </div>
+    <div>
+    <mat-form-field>
+      <mat-label>Brands</mat-label>
+      <mat-select [formControl]="itemForm.controls['brand']" multiple>
+        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
 
     <div fxFlex="50"  class="pr-1">
       <mat-form-field class="full-width">
         <input
         matInput
-        type="email"
-        name="email"
-        [formControl]="itemForm.controls['email']"
-        placeholder="Email">
-      </mat-form-field>
-    </div>
-
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="company"
-        [formControl]="itemForm.controls['company']"
-        placeholder="Company">
+        name="heading"
+       
+        [formControl]="itemForm.controls['heading']"
+        placeholder="Heading">
       </mat-form-field>
     </div>
     <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="phone"
-        [formControl]="itemForm.controls['phone']"
-        placeholder="Phone">
-      </mat-form-field>
-    </div>
+        <mat-form-field class="full-width">
+          <input
+          matInput
+          type="number"
+          width="120"
+          name="parentcategory"
+          [formControl]="itemForm.controls['parentcategory']"
+          placeholder="Parent Category">
+        </mat-form-field>
+      </div>
+
+  
+  
     <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="address"
-        [formControl]="itemForm.controls['address']"
-        placeholder="address">
-      </mat-form-field>
-    </div>
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="balance"
-        [formControl]="itemForm.controls['balance']"
-        placeholder="Balance">
-      </mat-form-field>
-    </div>
-    <div fxFlex="50"  class="pt-1 pr-1">
-      <mat-slide-toggle [formControl]="itemForm.controls['isActive']">Active Customer</mat-slide-toggle>
-    </div>
+        <mat-form-field class="example-full-width">
+            <textarea matInput placeholder="Keywords"></textarea>
+          </mat-form-field>
+        </div>
+        <div fxFlex="50"  class="pr-1">
+            <mat-form-field class="example-full-width">
+                <textarea matInput placeholder="Description"></textarea>
+              </mat-form-field>
+            </div>
 
+            <div fxFlex="50"  class="pr-1">
+                <mat-form-field class="example-full-width">
+                    <textarea matInput placeholder="Content"></textarea>
+                  </mat-form-field>
+                </div>
+                
+                <div fxFlex="50"  class="pr-1">
+                <h3>Logo Upload</h3>            
+                <div class="form-group">
+                    <input type="file" name="image" (change)="fileProgress1($event)" />
+                </div>
+                <div *ngIf="fileUploadProgress1">
+                    Upload progress: {{ fileUploadProgress1 }}
+                </div>
+                <div class="image-preview mb-3" *ngIf="previewUrlLogo">
+                    <img [src]="previewUrlLogo" height="100" />                 
+                </div>
+     
+                <div class="mb-3" *ngIf="uploadedFileLogo">
+                    {{uploadedFileLogo}}
+                </div>
 
-
+              </div>
+              <div fxFlex="50"  class="pr-1">
+                  <h3>Sidebar Upload</h3>            
+                  <div class="form-group">
+                      <input type="file" name="image" (change)="fileProgress($event)" />
+                  </div>
+                  <div *ngIf="fileUploadProgress">
+                      Upload progress: {{ fileUploadProgress }}
+                  </div>
+                  <div class="image-preview mb-3" *ngIf="previewUrl">
+                      <img [src]="previewUrl" height="100" />                 
+                  </div>
+       
+                  <div class="mb-3" *ngIf="uploadedFilePath">
+                      {{uploadedFilePath}}
+                  </div>
+  
+                </div>
     <div fxFlex="100" class="mt-1">
       <button mat-raised-button color="primary" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
       <span fxFlex></span>
