--- a/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
+++ b/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
@@ -1,6 +1,6 @@
 <h1 matDialogTitle>{{data.title}}</h1>
 {{"ADD" | translate }} {{"CATEGORY" | translate }}
-  <form [formGroup]="itemForm" (ngSubmit)="submit()">
+  <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     <div fxFlex="50"  class="pr-1">
       <mat-form-field class="full-width">
@@ -20,6 +20,19 @@
     </mat-form-field>
   </div>
 
+  <div fxFlex="50"  class="pr-1">
+    <mat-form-field class="full-width">
+      <input
+      matInput
+      name="heading"
+     
+      [formControl]="itemForm.controls['metatitle']"
+      placeholder="Metatitle">
+    </mat-form-field>
+
+
+  </div>
+
     <div fxFlex="50"  class="pr-1">
       <mat-form-field class="full-width">
         <input
@@ -33,40 +46,38 @@
  
     </div>
     <div fxFlex="50"  class="pr-1">
-        <mat-form-field class="full-width">
-          <input
-          matInput
-          type="number"
-          width="120"
-          name="parentcategory"
-          [formControl]="itemForm.controls['parentcategory']"
-          placeholder="Parent Category">
-        </mat-form-field>
+      <mat-form-field>
+        <mat-label>Parent Category</mat-label>
+        <mat-select [formControl]="itemForm.controls['parentcategory']" >
+          <mat-option *ngFor="let topping of parentCategory" [value]="topping">{{topping}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+        
       </div>
 
   
   
     <div fxFlex="50"  class="pr-1">
         <mat-form-field class="example-full-width">
-            <textarea matInput placeholder="Keywords"></textarea>
+            <textarea matInput placeholder="Keywords" [formControl]="itemForm.controls['keywords']" ></textarea>
           </mat-form-field>
         </div>
         <div fxFlex="50"  class="pr-1">
             <mat-form-field class="example-full-width">
-                <textarea matInput placeholder="Description"></textarea>
+                <textarea matInput placeholder="Description" [formControl]="itemForm.controls['description']" ></textarea>
               </mat-form-field>
             </div>
 
             <div fxFlex="50"  class="pr-1">
                 <mat-form-field class="example-full-width">
-                    <textarea matInput placeholder="Content"></textarea>
+                    <textarea matInput placeholder="Content"  [formControl]="itemForm.controls['content']"></textarea>
                   </mat-form-field>
                 </div>
                 
                 <div fxFlex="50"  class="pr-1">
                 <h3>Logo Upload</h3>            
                 <div class="form-group">
-                    <input type="file" name="image" (change)="fileProgress1($event)" />
+                    <input type="file" name="image"  style="display: none;" accept="image/*" #logo  (change)="fileProgress1($event)" />
                 </div>
                 <div *ngIf="fileUploadProgress1">
                     Upload progress: {{ fileUploadProgress1 }}
@@ -75,48 +86,36 @@
                     <img [src]="previewUrlLogo" height="100" />                 
                 </div>
      
-                <div class="mb-3" *ngIf="uploadedFileLogo">
-                    {{uploadedFileLogo}}
-                </div>
+                <div class="image-preview mb-3" *ngIf="previewUrl">
+                  <button mat-raised-button color="primary" type="button" (click)="logo.click()" style="margin-top: 10px; margin-left: 10px;" >Select Image</button>           
+              </div>
+              
 
               </div>
               <div fxFlex="50"  class="pr-1">
                   <h3>Sidebar Upload</h3>            
                   <div class="form-group">
-                      <input type="file" name="image" (change)="fileProgress($event)" />
+                      <input type="file"  style="display: none;" #fileside accept="image/*" name="image" (change)="fileProgress($event)" />
                   </div>
                   <div *ngIf="fileUploadProgress">
                       Upload progress: {{ fileUploadProgress }}
                   </div>
                   <div class="image-preview mb-3" *ngIf="previewUrl">
-                      <img [src]="previewUrl" height="100" />                 
+                      <img [src]="previewUrl"  height="100" />                 
                   </div>
+
+                  <div class="image-preview mb-3" *ngIf="previewUrl">
+                    <button mat-raised-button color="primary"  type="button" style="margin-top: 10px; margin-left: 10px;" (click)="fileside.click()" >Select Image</button>             
+                </div>
        
-                  <div class="mb-3" *ngIf="uploadedFilePath">
-                      {{uploadedFilePath}}
-                  </div>
+                
   
                 </div>
     <div fxFlex="100" class="mt-1">
-      <button mat-raised-button color="primary" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
       <span fxFlex></span>
       <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
     </div>
   </div>
   </form>
 
-  <mat-card class="default">
-   
-    <mat-card-content class="p-0">
-        <mat-grid-list cols="2" rowHeight="1:1" class="app-gallery">
-            <!-- Gallery item -->
-            <mat-grid-tile *ngFor="let photo of photos">
-              <img [src]="photo.url" alt="">
-              <!-- item detail, show on hover -->
-             
-            </mat-grid-tile>
-            <button mat-button color="warn" type="button">Upload</button>
-
-          </mat-grid-list>
-    </mat-card-content>
-  </mat-card>
