--- a/src/app/views/products/categories/categories.component.html
+++ b/src/app/views/products/categories/categories.component.html
@@ -13,35 +13,64 @@
           [scrollbarH]="true"
           [limit]="10"
           [rowHeight]="50">
-          <ngx-datatable-column name="Name" [flexGrow]="1">
+
+          
+          <ngx-datatable-column name="Logo" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.name }}
+              <div class="image-preview mb-3" >
+                <img [src]="linkImg(row?.imagelogo)"  width="42" height="42" />                 
+            </div>
+              
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Age" [flexGrow]="1">
+
+          <ngx-datatable-column name="Sidebar" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.age }}
+              <div class="image-preview mb-3" >
+                <img [src]="linkImg(row?.imagesidebar)"  width="42" height="42" />                 
+            </div>
+              
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Balance" [flexGrow]="1">
+          <ngx-datatable-column name="Brands" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.balance | currency }}
+              {{ row?.brands }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Company" [flexGrow]="1">
+          <ngx-datatable-column name="Metaitle" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.company }}
+              {{ row?.metatitle }}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Heading" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.heading  }}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="ParentCategory" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.parentcategory }}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Keywords" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.keywords }}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Content" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.content }}
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Status" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              <mat-chip mat-sm-chip [color]="'primary'" [selected]="row.isActive">{{row.isActive ? 'active' : 'inactive'}}</mat-chip>
+              <mat-chip mat-sm-chip [color]="'primary'" [selected]="row.isActive">{{row.isParent ? 'parent' : 'child'}}</mat-chip>
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Actions" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row)"><mat-icon>edit</mat-icon></button>
-              <button mat-icon-button mat-sm-button color="warn" (click)="deleteItem(row)"><mat-icon>delete</mat-icon></button>
+              <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row,false,row._id)"><mat-icon>edit</mat-icon></button>
+              <button mat-icon-button mat-sm-button color="warn" (click)="deleteItem(row._id)"><mat-icon>delete</mat-icon></button>
             </ng-template>
           </ngx-datatable-column>
         </ngx-datatable>
