--- a/src/app/views/products/tags/tags.component.html
+++ b/src/app/views/products/tags/tags.component.html
@@ -20,27 +20,13 @@
           </ngx-datatable-column>
           <ngx-datatable-column name="Age" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.age }}
+              {{ row?.description }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Balance" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.balance | currency }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Company" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.company }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Status" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              <mat-chip mat-sm-chip [color]="'primary'" [selected]="row.isActive">{{row.isActive ? 'active' : 'inactive'}}</mat-chip>
-            </ng-template>
-          </ngx-datatable-column>
+         
           <ngx-datatable-column name="Actions" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row)"><mat-icon>edit</mat-icon></button>
+              <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row,false,row._id)"><mat-icon>edit</mat-icon></button>
               <button mat-icon-button mat-sm-button color="warn" (click)="deleteItem(row)"><mat-icon>delete</mat-icon></button>
             </ng-template>
           </ngx-datatable-column>
