--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -1,21 +1,20 @@
 <h1 matDialogTitle>{{data.title}}</h1>
 {{"ADD" | translate }} {{"PRODUCT" | translate }}
   <form [formGroup]="itemForm" (ngSubmit)="submit()">
-  <div fxLayout="row wrap" fxLayout.lt-sm="column">
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="username"
-        [formControl]="itemForm.controls['name']"
-        placeholder="Name">
-      </mat-form-field>
-    </div>
-    <div>
+ <div fxLayout="row wrap" fxLayout.lt-sm="column">
+
+  
+
+
+ 
+    
+    <div  fxFlex="50"  class="pr-1">
+
+       
     <mat-form-field>
-      <mat-label>Brands</mat-label>
-      <mat-select [formControl]="itemForm.controls['brand']" multiple>
-        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+      <mat-label>Tags</mat-label>
+      <mat-select [formControl]="itemForm.controls['brand']" >
+        <mat-option *ngFor="let topping of items_tags" [value]="topping">{{topping.name}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -94,11 +93,8 @@
                       {{uploadedFilePath}}
                   </div>
   
-                </div>
-    <div fxFlex="100" class="mt-1">
-      <button mat-raised-button color="primary" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
-      <span fxFlex></span>
-      <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
-    </div>
+                </div>-
+     
+  
   </div>
   </form>
