--- a/src/app/views/products/manageproducts/manageproducts.component.html
+++ b/src/app/views/products/manageproducts/manageproducts.component.html
@@ -13,31 +13,46 @@
           [scrollbarH]="true"
           [limit]="10"
           [rowHeight]="50">
-          <ngx-datatable-column name="Name" [flexGrow]="1">
+
+          <ngx-datatable-column name="Logo" [flexGrow]="1">
+              <ng-template let-row="row" ngx-datatable-cell-template>
+                <div class="image-preview mb-3" >
+                  <img [src]="linkImg(row?.imagelogo)"  width="42" height="42" />                 
+              </div>
+                
+              </ng-template>
+            </ngx-datatable-column>
+          <ngx-datatable-column name="Slug" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.name }}
+              {{ row?.slug }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Age" [flexGrow]="1">
+          <ngx-datatable-column name="Description" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.age }}
+              {{ row?.description }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Balance" [flexGrow]="1">
+          <ngx-datatable-column name="Meta Description" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.balance | currency }}
+              {{ row?.metadescription }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Company" [flexGrow]="1">
+          <ngx-datatable-column name="Category" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.company }}
+              {{items[1].heading}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Status" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              <mat-chip mat-sm-chip [color]="'primary'" [selected]="row.isActive">{{row.isActive ? 'active' : 'inactive'}}</mat-chip>
-            </ng-template>
-          </ngx-datatable-column>
+          <ngx-datatable-column name="Tag" [flexGrow]="1">
+              <ng-template let-row="row" ngx-datatable-cell-template>
+                {{ row?.tag}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Stock" [flexGrow]="1">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                  {{ row?.stock}}
+                </ng-template>
+              </ngx-datatable-column>
+         
           <ngx-datatable-column name="Actions" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
               <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row)"><mat-icon>edit</mat-icon></button>
