--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -111,6 +111,24 @@
                 
   
                 </div>
+                
+
+                <div formArrayName="specifications">
+                  <div *ngFor="let item of specifications.controls; let pointIndex=index" [formGroupName]="pointIndex">
+                  <label>
+                   Specification <input
+                    matInput
+                    name="point"
+                    formControlName="point"
+                    
+                    placeholder="Specification">
+                   
+                  </label>
+                  <button mat-raised-button color="primary" (click)="deleteSellingPoint(pointIndex)" type="button"  >Delete</button>             
+                 </div>
+                  <button mat-raised-button color="primary" type="button" (click)="addSellingPoint()">Add</button>
+                </div>
+
     <div fxFlex="100" class="mt-1">
       <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
       <span fxFlex></span>
