--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -160,7 +160,7 @@
       >
         <div style="width: 100%;">
           <label>
-            Specification
+            Brand Specification
             <input
               style="border-bottom: 1px grey solid; width: 90%;"
               matInput
@@ -180,7 +180,7 @@
         </button>
       </div>
       <button
-        style="margin: 15px; left: 40%;"
+        style="margin: 15px; "
         mat-raised-button
         color="primary"
         type="button"
