--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -164,7 +164,7 @@
             <input
               style="border-bottom: 1px grey solid; width: 90%;"
               matInput
-              name="point"
+              name="point+'pointIndex'"
               formControlName="point"
               placeholder="Specification"
             />
