--- a/src/app/views/products/manageproducts/manageproducts.component.html
+++ b/src/app/views/products/manageproducts/manageproducts.component.html
@@ -39,7 +39,7 @@
           </ngx-datatable-column>
           <ngx-datatable-column name="Category" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{items[1].heading}}
+              {{row?.heading}}
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Tag" [flexGrow]="1">
