--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -168,6 +168,53 @@
               
 
               </div><br>
+              <h1 matDialogTitle>SEO Fields</h1>    
+              <div fxFlex="50"  class="pr-1"></div>
+              <div fxFlex="50"  class="pr-1">
+                  <mat-form-field class="full-width">
+                    <input
+                    matInput
+                    name="seo_metatitle"
+                    [formControl]="itemForm.controls['seo_metatitle']"
+                    placeholder="Metatitle">
+                  </mat-form-field>
+                </div> 
+
+                <div fxFlex="50"  class="pr-1">
+                    <mat-form-field class="full-width">
+                      <input
+                      matInput
+                      name="seo_metadescription"
+                      [formControl]="itemForm.controls['seo_metadescription']"
+                      placeholder="MetaDescription">
+                    </mat-form-field>
+                  </div> 
+     
+
+                  <div fxFlex="50"  class="pr-1">
+                      <mat-form-field class="full-width">
+                        <input
+                        matInput
+                        name="seo_metaheading"
+                        [formControl]="itemForm.controls['seo_metaheading']"
+                        placeholder="MetaHeading">
+                      </mat-form-field>
+                    </div> 
+                    <div fxFlex="50"  class="pr-1">
+                        <mat-form-field class="full-width">
+                          <input
+                          matInput
+                          name="seo_metaheadingdescription"
+                          [formControl]="itemForm.controls['seo_metaheadingdescription']"
+                          placeholder="MetaHeadingDescription">
+                        </mat-form-field>
+                      </div> 
+                      <div fxFlex="50"  class="pr-1">
+                          <mat-form-field class="example-full-width">
+                              <textarea matInput placeholder="Keywords"  [formControl]="itemForm.controls['seo_keywords']"></textarea>
+                            </mat-form-field>
+                          </div>
+
               <div fxFlex="100" class="mt-1">
                 <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
                 <span fxFlex></span>
