--- a/src/app/views/products/tags/tags-table-group/tags-table-group.component.html
+++ b/src/app/views/products/tags/tags-table-group/tags-table-group.component.html
@@ -2,7 +2,9 @@
 {{"ADD" | translate }} {{"TAG" | translate }}
   <form [formGroup]="itemForm" (ngSubmit)="submit()">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
-    <div fxFlex="100"  class="pr-1">
+      <h1 matDialogTitle>Product Tags</h1>
+      <div fxFlex="50"  class="pr-1"></div>
+    <div fxFlex="50"  class="pr-1">
       <mat-form-field class="full-width">
         <input
         matInput
@@ -11,13 +13,50 @@
         placeholder="Name">
       </mat-form-field>
     </div>
-   
 
+    <div fxFlex="50"  class="pr-1">
+        <mat-form-field class="full-width">
+          <input
+          matInput
+          name="slug"
+          [formControl]="itemForm.controls['slug']"
+          placeholder="Slug">
+        </mat-form-field>
+      </div>
+   
         <div fxFlex="100"  class="pr-1">
             <mat-form-field class="example-full-width">
                 <textarea matInput placeholder="Description" [formControl]="itemForm.controls['description']"></textarea>
               </mat-form-field>
             </div>
+
+            <h1 matDialogTitle>Brand Tags</h1>
+            <div fxFlex="50"  class="pr-1"></div>
+            <div fxFlex="50"  class="pr-1">
+              <mat-form-field class="full-width">
+                <input
+                matInput
+                name="brand_name"
+                [formControl]="itemForm.controls['brand_name']"
+                placeholder="Name">
+              </mat-form-field>
+            </div>
+        
+            <div fxFlex="50"  class="pr-1">
+                <mat-form-field class="full-width">
+                  <input
+                  matInput
+                  name="brand_slug"
+                  [formControl]="itemForm.controls['brand_slug']"
+                  placeholder="Slug">
+                </mat-form-field>
+              </div>
+           
+                <div fxFlex="100"  class="pr-1">
+                    <mat-form-field class="example-full-width">
+                        <textarea matInput placeholder="Description" [formControl]="itemForm.controls['brand_description']"></textarea>
+                      </mat-form-field>
+                    </div>
 
             
                 
