--- a/src/app/views/products/tags/tags.component.html
+++ b/src/app/views/products/tags/tags.component.html
@@ -18,7 +18,12 @@
               {{ row?.name }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Age" [flexGrow]="1">
+          <ngx-datatable-column name="Slug" [flexGrow]="1">
+              <ng-template let-row="row" ngx-datatable-cell-template>
+                {{ row?.slug }}
+              </ng-template>
+            </ngx-datatable-column>
+          <ngx-datatable-column name="Description" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
               {{ row?.description }}
             </ng-template>
