--- a/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
+++ b/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
@@ -1,5 +1,5 @@
 <h1 matDialogTitle>{{data.title}}</h1>
-{{"ADD" | translate }} {{"CATEGORY" | translate }}
+
   <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     <div fxFlex="50"  class="pr-1">
@@ -11,41 +11,23 @@
         placeholder="Name">
       </mat-form-field>
     </div>
-    <div>
-    <mat-form-field>
-      <mat-label>Brands</mat-label>
-      <mat-select [formControl]="itemForm.controls['brand']" multiple>
-        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
+   
 
   <div fxFlex="50"  class="pr-1">
     <mat-form-field class="full-width">
       <input
       matInput
-      name="heading"
+      name="slug"
      
-      [formControl]="itemForm.controls['metatitle']"
-      placeholder="Metatitle">
+      [formControl]="itemForm.controls['slug']"
+      placeholder="Slug">
     </mat-form-field>
 
 
   </div>
 
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="heading"
-       
-        [formControl]="itemForm.controls['heading']"
-        placeholder="Heading">
-      </mat-form-field>
-
  
-    </div>
-    <div fxFlex="50"  class="pr-1">
+    <div fxFlex="100"  class="pr-6">
       <mat-form-field>
         <mat-label>Parent Category</mat-label>
         <mat-select [formControl]="itemForm.controls['parentcategory']" >
@@ -56,26 +38,20 @@
       </div>
 
   
-  
-    <div fxFlex="50"  class="pr-1">
-        <mat-form-field class="example-full-width">
-            <textarea matInput placeholder="Keywords" [formControl]="itemForm.controls['keywords']" ></textarea>
-          </mat-form-field>
+      <div fxFlex="100"  class="pr-1">
+        
+          <quill-editor
+          [formControl]="itemForm.controls['description']"
+          theme="snow" 
+          [(ngModel)]="categoryDescription" 
+          
+          ></quill-editor>
+    
         </div>
-        <div fxFlex="50"  class="pr-1">
-            <mat-form-field class="example-full-width">
-                <textarea matInput placeholder="Description" [formControl]="itemForm.controls['description']" ></textarea>
-              </mat-form-field>
-            </div>
-
-            <div fxFlex="50"  class="pr-1">
-                <mat-form-field class="example-full-width">
-                    <textarea matInput placeholder="Content"  [formControl]="itemForm.controls['content']"></textarea>
-                  </mat-form-field>
-                </div>
-                
-                <div fxFlex="50"  class="pr-1">
-                <h3>Logo Upload</h3>            
+        
+   
+    <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
+                <h3>Icon Upload</h3>            
                 <div class="form-group">
                     <input type="file" name="image"  style="display: none;" accept="image/*" #logo  (change)="fileProgress1($event)" />
                 </div>
@@ -92,8 +68,8 @@
               
 
               </div>
-              <div fxFlex="50"  class="pr-1">
-                  <h3>Sidebar Upload</h3>            
+              <div fxFlex="50"  class="pr-1" style="margin-top: 90px;"> 
+                  <h3>Image Upload</h3>            
                   <div class="form-group">
                       <input type="file"  style="display: none;" #fileside accept="image/*" name="image" (change)="fileProgress($event)" />
                   </div>
@@ -108,7 +84,7 @@
                     <button mat-raised-button color="primary"  type="button" style="margin-top: 10px; margin-left: 10px;" (click)="fileside.click()" >Select Image</button>             
                 </div>
               </div>
-              <div fxFlex="50"  class="pr-1"><h1>SEO Fields</h1></div>
+              <div fxFlex="50"  class="pr-1" style="margin-top: 40px;"><h4>SEO Fields</h4></div>
               <div fxFlex="50"  class="pr-1"></div>
               <div fxFlex="50"  class="pr-1">
                   <mat-form-field class="full-width">
@@ -120,18 +96,21 @@
                   </mat-form-field>
                 </div> 
 
-                <div fxFlex="50"  class="pr-1">
-                    <mat-form-field class="full-width">
-                      <input
-                      matInput
-                      name="seo_metadescription"
-                      [formControl]="itemForm.controls['seo_metadescription']"
-                      placeholder="MetaDescription">
-                    </mat-form-field>
-                  </div> 
+
+                <div fxFlex="100"  class="pr-1">
+        
+                  <quill-editor
+                  [formControl]="itemForm.controls['seo_metadescription']"
+                  theme="snow" 
+                  [(ngModel)]="metaDescription" 
+                  
+                  ></quill-editor>
+            
+                </div>
+               
      
 
-                  <div fxFlex="50"  class="pr-1">
+                  <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
                       <mat-form-field class="full-width">
                         <input
                         matInput
@@ -140,16 +119,19 @@
                         placeholder="MetaHeading">
                       </mat-form-field>
                     </div> 
-                    <div fxFlex="50"  class="pr-1">
-                        <mat-form-field class="full-width">
-                          <input
-                          matInput
-                          name="seo_metaheadingdescription"
-                          [formControl]="itemForm.controls['seo_metaheadingdescription']"
-                          placeholder="MetaHeadingDescription">
-                        </mat-form-field>
-                      </div> 
-                      <div fxFlex="50"  class="pr-1">
+
+                    <div fxFlex="100"  class="pr-1">
+        
+                      <quill-editor
+                      [formControl]="itemForm.controls['seo_metaheadingdescription']"
+                      theme="snow" 
+                      [(ngModel)]="metaHeadingDescription" 
+                      
+                      ></quill-editor>
+                
+                    </div>
+                   
+                      <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
                           <mat-form-field class="example-full-width">
                               <textarea matInput placeholder="Keywords"  [formControl]="itemForm.controls['seo_keywords']"></textarea>
                             </mat-form-field>
